change homepage attr in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nyc-surf",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://myusername.github.io/my-app",
+  "homepage": "https://myusername.github.io/nycsurf",
   "dependencies": {
     "gh-pages": "^1.0.0",
     "node-sass-chokidar": "0.0.3",
