--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "https://myusername.github.io/nycsurf",
   "dependencies": {
+    "axios": "^0.17.1",
     "gh-pages": "^1.0.0",
     "node-sass-chokidar": "0.0.3",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "request": "^2.83.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -18,6 +20,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "eject": "react-scripts eject",
+    "server": "cd msw-server && nodemon index.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn start\""
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.1",
+    "dotenv": "^5.0.0"
+  },
+  "proxy": "http://localhost:5000/"
 }
