--- a/react/public/manifest.json
+++ b/react/public/manifest.json
@@ -3,8 +3,13 @@
   "name": "NYC Surf",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "./surf192.png",
+      "sizes": "192x192",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "./surf512.png",
+      "sizes": "512x512",
       "type": "image/x-icon"
     }
   ],
