--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react/node_modules"
   ],
   "dependencies": {
+    "compression": "^1.7.2",
     "express": "^4.16.2",
     "request": "^2.83.0"
   },
