Update information display.

--- a/react/package.json
+++ b/react/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "gh-pages": "^1.0.0",
+    "moment": "^2.22.1",
     "node-sass-chokidar": "0.0.3",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
