updating react to the hooks alpha release

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "compression": "^1.7.2",
     "express": "^4.16.2",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "request": "^2.83.0"
   },
   "devDependencies": {
