--- a/react/package.json
+++ b/react/package.json
@@ -7,10 +7,10 @@
     "gh-pages": "^1.0.0",
     "moment": "^2.22.1",
     "node-sass-chokidar": "0.0.3",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "react-scripts": "1.0.17",
-    "request": "^2.83.0"
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-scripts": "2.1.1",
+    "request": "^2.88.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -25,5 +25,11 @@
   "devDependencies": {
     "dotenv": "^5.0.0"
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
